[gd_scene load_steps=8 format=3 uid="uid://cbgillxkopk6m"]

[ext_resource type="Script" path="res://level.gd" id="1_qyms7"]
[ext_resource type="PackedScene" uid="uid://q6ggvq6vk7dd" path="res://enemy.tscn" id="2_8sq0a"]
[ext_resource type="PackedScene" uid="uid://cbql1cbw06ntf" path="res://player.tscn" id="3_jbm6p"]
[ext_resource type="Script" path="res://main_menu.gd" id="4_ba7bo"]
[ext_resource type="PackedScene" uid="uid://qe0lhydj46dq" path="res://score.tscn" id="5_gb3ah"]
[ext_resource type="AudioStream" uid="uid://uidoajxy50yl" path="res://BigEatSmall.mp3" id="6_ss51n"]

[sub_resource type="Curve2D" id="Curve2D_3jw3d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -7, 1003, 0, 0, 0, 0, -10, -8, 0, 0, 0, 0, 1006, -7, 0, 0, 0, 0, 1003, 1005, 0, 0, 0, 0, -7, 1003)
}
point_count = 5

[node name="Node" type="Node"]
script = ExtResource("1_qyms7")
enemyScene = ExtResource("2_8sq0a")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="Player" parent="." instance=ExtResource("3_jbm6p")]

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="MainMenu" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 200
script = ExtResource("4_ba7bo")

[node name="Vbox" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="UI/MainMenu/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Big Eat Small"

[node name="Start" type="Button" parent="UI/MainMenu/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Start
"

[node name="GameOver" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 200
script = ExtResource("4_ba7bo")

[node name="Vbox" type="VBoxContainer" parent="UI/GameOver"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="UI/GameOver/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Oh no, you died."

[node name="Start" type="Button" parent="UI/GameOver/Vbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Restart
"

[node name="Score" parent="UI" instance=ExtResource("5_gb3ah")]

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(291, 555)

[node name="Enemy5" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(190, 309)

[node name="Enemy6" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(261, 139)

[node name="Enemy7" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(697, 79)

[node name="Enemy8" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(848, 226)

[node name="Enemy9" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(879, 441)

[node name="Enemy10" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(831, 684)

[node name="Enemy11" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(622, 831)

[node name="Enemy12" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(396, 876)

[node name="Enemy13" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(135, 863)

[node name="Enemy14" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(442, 745)

[node name="Enemy15" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(111, 516)

[node name="Enemy16" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(450, 118)

[node name="Enemy2" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(524, 587)

[node name="Enemy3" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(307, 686)

[node name="Enemy4" parent="Enemies" instance=ExtResource("2_8sq0a")]
position = Vector2(631, 501)

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3jw3d")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(-7, 1003)
rotation = -1.57376

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("6_ss51n")
volume_db = -10.0
autoplay = true

[connection signal="enemyKilled" from="Player" to="." method="_on_player_enemy_killed"]
[connection signal="enemyKilled" from="Player" to="UI/Score" method="_on_player_enemy_killed"]
[connection signal="playerDied" from="Player" to="." method="_on_player_player_died"]
[connection signal="gameStart" from="UI/MainMenu" to="." method="_on_main_menu_game_start"]
[connection signal="pressed" from="UI/MainMenu/Vbox/Start" to="UI/MainMenu" method="_on_start_pressed"]
[connection signal="gameStart" from="UI/GameOver" to="." method="_on_main_menu_game_start"]
[connection signal="gameStart" from="UI/GameOver" to="UI/Score" method="_on_game_over_game_start"]
[connection signal="pressed" from="UI/GameOver/Vbox/Start" to="UI/GameOver" method="_on_start_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
